tests/ui/lint/snapshots/fix_manual_is_empty.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let xs = [1, 2, 3]
  let _ = xs.length() == 0
}
=== fixed ===
fn main() {
  let xs = [1, 2, 3]
  let _ = xs.is_empty()
}
