tests/ui/lint/snapshots/fix_manual_replace_all.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:strings"

fn main() {
  let s = "hello world"
  let _ = strings.Replace(s, "o", "0", -1)
}
=== fixed ===
import "go:strings"

fn main() {
  let s = "hello world"
  let _ = strings.ReplaceAll(s, "o", "0")
}
