tests/ui/lint/snapshots/fix_manual_time_since.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:time"

fn main() {
  let t = time.Now()
  let _ = time.Now().Sub(t)
}
=== fixed ===
import "go:time"

fn main() {
  let t = time.Now()
  let _ = time.Since(t)
}
