tests/ui/lint/snapshots/fix_manual_time_until.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:time"

fn main() {
  let deadline = time.Now()
  let _ = deadline.Sub(time.Now())
}
=== fixed ===
import "go:time"

fn main() {
  let deadline = time.Now()
  let _ = time.Until(deadline)
}
