tests/ui/lint/snapshots/fix_needless_bool_assign.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(c: bool) -> bool {
  let mut x = false
  if c {
    x = true
  } else {
    x = false
  }
  x
}
=== fixed ===
pub fn f(c: bool) -> bool {
  let mut x = false
  x = c
  x
}
