tests/ui/lint/snapshots/fix_needless_continue.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  for i in 0..10 {
    let _ = i
    continue
  }
}
=== fixed ===
fn main() {
  for i in 0..10 {
    let _ = i
  }
}
